Ajustando metodos da classe Product